--- a/app/index.html
+++ b/app/index.html
@@ -12,6 +12,7 @@
         <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
         <!-- build:css(.tmp) styles/main.css -->
         <link rel="stylesheet" href="styles/main.css">
+         <link rel="stylesheet" href="styles/customanimation.css">
         <link rel="stylesheet" href="styles/animation.css">
         <!-- endbuild -->
     </head>
@@ -21,7 +22,7 @@
         <![endif]-->
 
 
-        <div class="hero-unit">
+	<!--        <div class="hero-unit">
           <h1>'Allo, 'Allo!</h1>
           <p>You now have</p>
           <ul>
@@ -30,6 +31,7 @@
             <li>RequireJS</li>
           </ul>
         </div>
+        -->
 
 
         <!-- build:js scripts/vendor.js -->
