--- a/app/index.html
+++ b/app/index.html
@@ -14,6 +14,9 @@
         <link rel="stylesheet" href="styles/main.css">
          <link rel="stylesheet" href="styles/customanimation.css">
         <link rel="stylesheet" href="styles/animation.css">
+        <link href="//netdna.bootstrapcdn.com/twitter-bootstrap/2.3.1/css/bootstrap-combined.min.css" rel="stylesheet">
+	<link href="//cdnjs.cloudflare.com/ajax/libs/font-awesome/3.0.2/css/font-awesome.min.css" rel="stylesheet">
+	
         <!-- endbuild -->
     </head>
     <body>
